feature: add functionality - add list of channels

--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#">News</a></li>
-                <li><a href="#">About me</a></li>
-                <li><a href="#">Ask for help</a></li>
-            </ul>
-        </nav>
+        <div>
+            <button>News</button>
+            <button>About me</button>
+            <button>Ask for help</button>
+        </div>
     </header>
     <main>
         <div id="output">Some Text</div>
