feature: add opportunity to set amount of news

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <header class="page-header">
         <div class="wrapper page-header_wrapper">
-            <button  class="page-header_btn" id="download-news-button">Show News</button>
+            <button class="page-header_btn" id="download-news-button">Show News</button>
+            <input class="page-header_input" id="news-amount" type="text" placeholder="enter number of news... ">
             <select  class="page-header_selection" id="channel-select" disabled>
                 <option value="loading">Loading...</option>
             </select>
