refactor: make with use of classes

--- a/index.html
+++ b/index.html
@@ -8,22 +8,15 @@
 </head>
 <body>
     <header class="page-header">
-        <div class="wrapper page-header_wrapper">
-            <button class="page-header_btn" id="download-news-button">Show News</button>
-            <input class="page-header_input" id="news-amount" type="text" placeholder="enter number of news... ">
-            <select  class="page-header_selection" id="channel-select" disabled>
-                <option value="loading">Loading...</option>
-            </select>
+        <div class="wrapper page-header_wrapper" id="buttons-container">
         </div>
     </header>
     <main>
-        <div class="wrapper">
-            <div id="output">Some Text</div>
+        <div class="wrapper" id="container">
         </div>
     </main>
     <footer>
-        <div class="wrapper">
-            <small>&copy; Copyright 2018, Front Camp Created</small>
+        <div class="wrapper" id="copyright">
         </div>
     </footer>
     <script src="./src/index.js"></script>
