--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="wrapper" id="container">
         </div>
     </main>
-    <footer>
+    <footer class="page-footer">
         <div class="wrapper" id="copyright">
         </div>
     </footer>
