--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
     </header>
     <main>
-        <div class="wrapper" id="container">
+        <div class="wrapper main_wrapper" id="container">
         </div>
     </main>
     <footer class="page-footer">
