feature/ finish task

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <main>
         <div class="wrapper main_wrapper" id="container">
             <div id="output"></div>
-            <nav class="page-header_selection" id="buttons"></nav>
+            <aside class="aside">
+                <nav class="page-header_selection" id="buttons"></nav>
+            </aside>
         </div>
     </main>
     <footer class="page-footer">
