feature/ add some styles and mixin

--- a/fc-angular2/src/fc-shared-components/fc-footer/fc-footer.html
+++ b/fc-angular2/src/fc-shared-components/fc-footer/fc-footer.html
@@ -1,4 +1,9 @@
-<footer>
-  <span>Footer</span>
-  <span><a href="https://newsapi.org/">Powered by News API</a></span>
+<footer class="footer">
+  <ng-content class="footer--additional-content"></ng-content>
+  <div class="footer--main-content">
+    <span class="footer-content">Footer</span>
+    <span class="footer-content">
+    <a class="footer-link" href="https://newsapi.org/">Powered by News API</a>
+  </span>
+  </div>
 </footer>
