--- a/fc-angular2/src/fc-main-page/fc-filter-panel/fc-filter-panel.html
+++ b/fc-angular2/src/fc-main-page/fc-filter-panel/fc-filter-panel.html
@@ -7,7 +7,7 @@
   </select>
   <form class="filters-text" action="/">
     <input type="text" placeholder="Type your text...">
-    <button>Filter</button>
+    <button class="filters-button">Filter</button>
   </form>
   <div class="filters-checkbox">
     <label>
