feature/ routing with mocked data

--- a/fc-angular2/src/fc-article-page/fc-article-page.html
+++ b/fc-angular2/src/fc-article-page/fc-article-page.html
@@ -14,7 +14,7 @@
     </figcaption>
   </figure>
   <div class="article-buttons buttons">
-    <button class="buttons-edit">Edit</button>
-    <button class="buttons-delete">Delete</button>
+    <a class="buttons-edit" [routerLink]="'/edit'">Edit</a>
+    <a class="buttons-delete">Delete</a>
   </div>
 </article>
