--- a/fc-angular2/src/fc-edit-page/fc-edit-page.html
+++ b/fc-angular2/src/fc-edit-page/fc-edit-page.html
@@ -31,8 +31,8 @@
       <input type="text" id="source">
     </li>
     <li class="buttons">
-      <button class="buttons-save">Save</button>
-      <button class="buttons-cancel">Cancel</button>
+      <a class="buttons-save">Save</a>
+      <a class="buttons-cancel" [routerLink] = "'/articles'">Cancel</a>
     </li>
   </ul>
 </form>
