--- a/fc-angular2/src/fc-shared-components/fc-header/fc-header.html
+++ b/fc-angular2/src/fc-shared-components/fc-header/fc-header.html
@@ -13,7 +13,6 @@
     <button class="header-button">{{ buttonName }}</button>
   </div>
   <div class="header-additional-content">
-    <ng-content selector="source-name"></ng-content>
-    <ng-content selector="filter-panel"></ng-content>
+    <ng-content></ng-content>
   </div>
 </header>
