--- a/fc-angular2/src/fc-main-page/fc-articles-list/fc-articles-list.html
+++ b/fc-angular2/src/fc-main-page/fc-articles-list/fc-articles-list.html
@@ -1,4 +1,4 @@
-<fc-main-page-article
-*ngFor="let article of list"
+<fc-article
+*ngFor="let article of articles"
 [article]="article"
-></fc-main-page-article>
+></fc-article>
