--- a/fc-angular2/src/fc-main-page/fc-articles-list/fc-articles-list.html
+++ b/fc-angular2/src/fc-main-page/fc-articles-list/fc-articles-list.html
@@ -1,4 +1,5 @@
 <fc-article
 *ngFor="let article of articles"
 [article]="article"
+[style.display]="(isOnlyMyArticlesVisible && !article.isCreatedByMe) ? 'none' : 'block'"
 ></fc-article>
