--- a/fc-angular2/src/fc-main-page/fc-filter-panel/fc-filter-panel.html
+++ b/fc-angular2/src/fc-main-page/fc-filter-panel/fc-filter-panel.html
@@ -15,7 +15,11 @@
   </form>
   <div class="filters-checkbox">
     <label>
-      <input type="checkbox" [checked]=false>Only created by me
+      <input
+        type="checkbox"
+        [checked]="isOnlyMyVisible"
+        (change)="toggleCreatedByMe()"
+      >Only created by me
     </label>
   </div>
   <button class="add-article">Add Article</button>
