--- a/fc-angular2/src/fc-main-page/fc-main-page.html
+++ b/fc-angular2/src/fc-main-page/fc-main-page.html
@@ -1,8 +1,10 @@
 <fc-filter-panel
-  (valueChange)="loadNews($event)"
+  (onNewsSourceChange)="loadNews($event)"
+  (onMyArticlesVisibilityStateChange)="toggleMyArticlesVisibility($event)"
 ></fc-filter-panel>
 <div class="wrapper">
   <fc-articles-list
+    [isOnlyMyArticlesVisible]="isOnlyMyArticles"
     [articles]="articlesList"
   ></fc-articles-list>
 </div>
