--- a/fc-angular2/src/fc-main-page/fc-main-page.html
+++ b/fc-angular2/src/fc-main-page/fc-main-page.html
@@ -1,6 +1,7 @@
 <fc-filter-panel
   (onNewsSourceChange)="loadNews($event)"
   (onMyArticlesVisibilityStateChange)="toggleMyArticlesVisibility($event)"
+  (onFindByWords)="filterByWords($event)"
 ></fc-filter-panel>
 <div class="wrapper">
   <fc-articles-list
