feature/ delete save functionality

--- a/fc-angular2/src/fc-article-page/fc-article-page.html
+++ b/fc-angular2/src/fc-article-page/fc-article-page.html
@@ -16,7 +16,7 @@
     </figure>
     <div class="article-buttons buttons">
       <a class="buttons-edit" [routerLink]="'/edit'">Edit</a>
-      <a class="buttons-delete">Delete</a>
+      <a class="buttons-delete" (click)="deleteAndLeave()">Delete</a>
     </div>
   </article>
 </div>
