--- a/fc-angular2/src/fc-edit-page/fc-edit-page.html
+++ b/fc-angular2/src/fc-edit-page/fc-edit-page.html
@@ -1,38 +1,40 @@
-<form action="/" class="form-edit">
-  <ul class="ls-list">
-    <li>
-      <label for="headline">Heading</label>
-      <input type="text" id="headline">
-    </li>
-    <li>
-      <label for="description">Short description</label>
-      <input type="text" id="description">
-    </li>
-    <li>
-      <label for="content">Content</label>
-      <textarea id="content" cols="53" rows="6"></textarea>
-    </li>
-  </ul>
-  <ul class="rs-list">
-    <li>
-      <label for="image">Image</label>
-      <input type="text" id="image">
-    </li>
-    <li>
-      <label for="date">Date</label>
-      <input type="text" id="date">
-    </li>
-    <li>
-      <label for="author">Author</label>
-      <input type="text" id="author">
-    </li>
-    <li>
-      <label for="source">Source</label>
-      <input type="text" id="source">
-    </li>
-    <li class="buttons">
-      <a class="buttons-save">Save</a>
-      <a class="buttons-cancel" [routerLink] = "'/articles'">Cancel</a>
-    </li>
-  </ul>
-</form>
+<div class="wrapper">
+  <form action="/" class="form-edit">
+    <ul class="ls-list">
+      <li>
+        <label for="headline">Heading</label>
+        <input type="text" id="headline">
+      </li>
+      <li>
+        <label for="description">Short description</label>
+        <input type="text" id="description">
+      </li>
+      <li>
+        <label for="content">Content</label>
+        <textarea id="content" cols="53" rows="6"></textarea>
+      </li>
+    </ul>
+    <ul class="rs-list">
+      <li>
+        <label for="image">Image</label>
+        <input type="text" id="image">
+      </li>
+      <li>
+        <label for="date">Date</label>
+        <input type="text" id="date">
+      </li>
+      <li>
+        <label for="author">Author</label>
+        <input type="text" id="author">
+      </li>
+      <li>
+        <label for="source">Source</label>
+        <input type="text" id="source">
+      </li>
+      <li class="buttons">
+        <a class="buttons-save" (click)="saveAndLeavePage()">Save</a>
+        <a class="buttons-cancel" [routerLink] = "'/articles'">Cancel</a>
+      </li>
+    </ul>
+  </form>
+</div>
