feature/ unmock http add my articles

--- a/fc-angular2/src/fc-main-page/fc-main-page.html
+++ b/fc-angular2/src/fc-main-page/fc-main-page.html
@@ -1,3 +1,6 @@
+<fc-source-name
+  [sourceName]="currentNewsChannel"
+></fc-source-name>
 <fc-filter-panel
   (onNewsSourceChange)="loadNews($event)"
   (onMyArticlesVisibilityStateChange)="toggleMyArticlesVisibility($event)"
@@ -8,4 +11,5 @@
     [isOnlyMyArticlesVisible]="isOnlyMyArticles"
     [articles]="articlesList"
   ></fc-articles-list>
+  <button class="footer-button" (click)="loadMoreArticles()">{{loadMore}}</button>
 </div>
