--- a/fc-angular2/src/fc-shared-components/fc-source-name/fc-source-name.html
+++ b/fc-angular2/src/fc-shared-components/fc-source-name/fc-source-name.html
@@ -1,3 +1,3 @@
 <div class="source-name--backdrop">
-  <h2 class="source-name--headline">Source Name</h2>
+  <h2 class="source-name--headline">{{sourceName}}</h2>
 </div>
