--- a/fc-angular2/src/fc-article-page/fc-article-page.html
+++ b/fc-angular2/src/fc-article-page/fc-article-page.html
@@ -1,3 +1,6 @@
+<fc-source-name
+  [sourceName]="databaseSource"
+></fc-source-name>
 <div class="wrapper">
   <article class="article">
     <figure class="article-info">
