feature/ change edit page headline depending on link place

--- a/fc-angular2/src/fc-edit-page/fc-edit-page.html
+++ b/fc-angular2/src/fc-edit-page/fc-edit-page.html
@@ -1,3 +1,6 @@
+<fc-source-name
+  [sourceName]="pageName"
+></fc-source-name>
 <div class="wrapper">
   <form action="/" class="form-edit">
     <ul class="ls-list">
