--- a/fc-angular2/src/fc-main-page/fc-filter-panel/fc-filter-panel.html
+++ b/fc-angular2/src/fc-main-page/fc-filter-panel/fc-filter-panel.html
@@ -22,5 +22,5 @@
       >Only created by me
     </label>
   </div>
-  <button class="add-article" [routerLink]="'/edit'">Add Article</button>
+  <button class="add-article" [routerLink]="'/edit'" [queryParams]="{ pageName: 'Create Article' }">Add Article</button>
 </div>
