feature/ add form functionality

--- a/fc-angular2/src/fc-article-page/fc-article-page.html
+++ b/fc-angular2/src/fc-article-page/fc-article-page.html
@@ -18,7 +18,7 @@
       </figcaption>
     </figure>
     <div class="article-buttons buttons">
-      <a class="buttons-edit" [routerLink]="'/edit'">Edit</a>
+      <a class="buttons-edit" [routerLink]="'/edit'" [queryParams]="{ pageName: 'Edit Article', id: article.id }">Edit</a>
       <a class="buttons-delete" (click)="deleteAndLeave()">Delete</a>
     </div>
   </article>
