--- a/fc-angular2/src/fc-main-page/fc-main-page.html
+++ b/fc-angular2/src/fc-main-page/fc-main-page.html
@@ -4,12 +4,12 @@
 <fc-filter-panel
   (onNewsSourceChange)="loadNews($event)"
   (onMyArticlesVisibilityStateChange)="toggleMyArticlesVisibility($event)"
-  (onFindByWords)="filterByWords($event)"
+  (onFindByWords)="wordsToFind = $event"
 ></fc-filter-panel>
 <div class="wrapper">
   <fc-articles-list
     [isOnlyMyArticlesVisible]="isOnlyMyArticles"
-    [articles]="articlesList"
+    [articles]="articlesList | feFilter:wordsToFind"
   ></fc-articles-list>
   <button class="footer-button" (click)="loadMoreArticles()">{{loadMore}}</button>
 </div>
